# oxygine-facebook

./: .gitignore  .hgignore  Android.mk  CMakeLists.txt
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
android/src/com/furry/FacebookAdapter/: FacebookAdapter.java
android/src/org/oxygine/facebook/: Facebook.java  FacebookAdapter.java
example/HelloWorldFacebook/data-ram/: .facebook
example/HelloWorldFacebook/data/demo/: big.bmfc  font.fnt  main.bmfc  num_fnt_shdr.fnt
example/HelloWorldFacebook/proj.android/: AndroidManifest.xml  build-run.bat  build.gradle  build.xml  install.bat  project.properties  settings.gradle
example/HelloWorldFacebook/proj.android/jni/: Application.mk
example/HelloWorldFacebook/proj.android/jni/src/: Android.mk
example/HelloWorldFacebook/proj.android/res/values/: strings.xml
example/HelloWorldFacebook/proj.cmake/: CMakeLists.txt
example/HelloWorldFacebook/proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
example/HelloWorldFacebook/proj.ios/HelloWorldFacebook_ios.xcodeproj/: project.pbxproj
example/HelloWorldFacebook/proj.win32/: HelloWorldFacebook.sln  HelloWorldFacebook.vcxproj  HelloWorldFacebook.vcxproj.filters
example/HelloWorldFacebook/src/: example.cpp  main.cpp  test.cpp  test.h
example/HelloWorldFacebook/src/ios/: AppDelegate.h  AppDelegate.mm
src/: facebook.cpp  facebook.h
src/android/: AndroidFacebook.cpp  AndroidFacebook.h
src/ios/: iosFacebook.h  iosFacebook.mm
src/sim/: FacebookSimulator.cpp  FacebookSimulator.h
(+1 files in other folders)
